--- a/src/app.html
+++ b/src/app.html
@@ -1,16 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--
 SPDX-FileCopyrightText: © 2025 Stefan Siegel <ssiegel@sdas.net>
 SPDX-License-Identifier: AGPL-3.0-or-later
 -->
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%sveltekit.assets%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    %sveltekit.head%
+  </head>
+  <body data-sveltekit-preload-data="hover">
+    <div style="display: contents">%sveltekit.body%</div>
+  </body>
 </html>
